# backstage

./: .gitignore  BACKSTAGE_UPDATES.md  app-config.production.yaml  app-config.yaml  package.json  startDev.sh
examples/: entities.yaml  org.yaml
examples/custom-entities/: databases.yaml  environments.yaml  mkdocs.yml  pipelines.yaml
examples/jira-template/: README.md  template.yaml
examples/jira-template/content/: example-catalog-info.yaml
examples/template/: template.yaml
plugins/ephemeralenvironments/: README.md  package.json
plugins/ephemeralenvironments/dev/: index.tsx
plugins/ephemeralenvironments/src/: index.ts  plugin.test.ts  plugin.ts  routes.ts
plugins/github-insights/: README.md
plugins/github-repositories-contibutors/: README.md  TROUBLESHOOTING.md  github-contributors-fix-implementation.md  github-contributors-plugin-updates.md  github-contributors-pr-description.md  package.json
plugins/github-repositories-contibutors/dev/: index.tsx
plugins/github-repositories-contibutors/src/: index.ts  plugin.d.ts  plugin.test.ts  (+2 more)
plugins/jenkins-insights/: CONSOLE_PARSING_VALIDATION.md  README.md  package.json
plugins/jira-plugin/: README.md  package.json
plugins/jira-trends-backend/: COMPLIANCE_BENCHMARK_GUIDE.md  README.md  package.json
plugins/jira-trends-frontend/: README.md  config.d.ts  package.json
plugins/permission-policy-backend-backend/: README.md  package.json  tsconfig.json
plugins/permission-policy-frontend/: README.md  package.json  tsconfig.json
plugins/scaffolder-backend-module-jenkins-scaffolder-action/: BACKEND_DIRECT_API_FIX.md  COMPLETE_FIX_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JENKINS_404_ERROR_FIXES.md  JENKINS_URL_FIX_SUMMARY.md  PIPELINE_JOB_ANALYSIS.md  POST_PUBLISH_SKELETON_FIX.md  README.md  package.json  test-jenkins-fixes.js
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/: .env.example  Dockerfile  Jenkinsfile.build  Jenkinsfile.quality  Jenkinsfile.release  catalog-info.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/app/: __init__.py  api.py  auth.py  celery_app.py  config.py  crud.py  database.py  exceptions.py  main.py  middleware.py  models.py  schemas.py  tasks.py  utils.py
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/app/migrations/: 001_initial.py  002_seed_data.py
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/helm/: Chart.yaml  values.yaml
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/tests/: conftest.py  test_api.py  test_auth.py  test_models.py
plugins/scaffolder-backend-module-jenkins-scaffolder-action/examples/python-app/skeleton/{{ values.name | replace('-', '_') }}/: __init__.py  main.py
plugins/scaffolder-backend-module-shell-script/: ENVIRONMENT_MAPPING_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  README.md  package.json
plugins/sourcecontrol-trends-backend/: README.md  package.json
plugins/sourcecontrol-trends-frontend/: README.md  package.json
plugins/test-backstage-plugin/: README.md  package.json
(+273 files in other folders)
